@@ -16,13 +16,10 @@ import com.powsybl.commons.parameters.ConfiguredParameter;
 import com.powsybl.commons.parameters.Parameter;
 import com.powsybl.commons.parameters.ParameterDefaultValueConfig;
 import com.powsybl.commons.parameters.ParameterType;
-import com.powsybl.iidm.network.Generator;
-import com.powsybl.iidm.network.Importer;
-import com.powsybl.iidm.network.Network;
-import com.powsybl.iidm.network.NetworkFactory;
+import com.powsybl.iidm.network.*;
 import com.powsybl.iidm.network.extensions.SlackTerminal;
 import com.powsybl.iidm.network.util.ContainersMapping;
-import static com.powsybl.powerfactory.converter.DataAttributeNames.*;
+import com.powsybl.powerfactory.converter.AbstractConverter.ConnectedObjRef;
 import com.powsybl.powerfactory.converter.AbstractConverter.NodeRef;
 import com.powsybl.powerfactory.model.DataObject;
 import com.powsybl.powerfactory.model.PowerFactoryDataLoader;
@@ -41,6 +38,9 @@ import java.time.ZonedDateTime;
 import java.util.*;
 import java.util.concurrent.TimeUnit;
 
+import static com.powsybl.powerfactory.converter.ContainersMappingHelper.buildSubstationId;
+import static com.powsybl.powerfactory.converter.DataAttributeNames.ELMTERM;
+
 /**
  * @author Geoffroy Jamgotchian {@literal <geoffroy.jamgotchian at rte-france.com>}
  */
@@ -53,6 +53,8 @@ public class PowerFactoryImporter implements Importer {
 
     // Import parameters
     public static final String HVDC_IMPORT_MT = "powerfactory.import.dgs.HVDC-import-detailed";
+    public static final String FORCE_ALL_ELMTERMS_AS_BUSBARS = "powerfactory.import.dgs.force-all-elmTerms-as-busbars";
+    public static final String IMPORT_GEODATA = "powerfactory.import.geodata";
 
     public static final Parameter HVDC_IMPORT_DETAILED_PARAMETER = new Parameter(
             HVDC_IMPORT_MT,
@@ -61,9 +63,27 @@ public class PowerFactoryImporter implements Importer {
         Boolean.FALSE
     );
 
+    public static final Parameter FORCE_ALL_ELMTERMS_AS_BUSBARS_PARAMETER = new Parameter(
+            FORCE_ALL_ELMTERMS_AS_BUSBARS,
+            ParameterType.BOOLEAN,
+            "Import all ElmTerms as busbars",
+            Boolean.FALSE
+    );
+
+    public static final Parameter IMPORT_GEODATA_PARAMETER = new Parameter(
+            IMPORT_GEODATA,
+            ParameterType.BOOLEAN,
+            "Import geoData",
+            Boolean.FALSE
+    );
+
     @Override
     public List<Parameter> getParameters() {
-        return ConfiguredParameter.load(Collections.singletonList(HVDC_IMPORT_DETAILED_PARAMETER), getFormat(), ParameterDefaultValueConfig.INSTANCE);
+        List<Parameter> parameterList = List.of(
+                HVDC_IMPORT_DETAILED_PARAMETER,
+                FORCE_ALL_ELMTERMS_AS_BUSBARS_PARAMETER,
+                IMPORT_GEODATA_PARAMETER);
+        return ConfiguredParameter.load(parameterList, getFormat(), ParameterDefaultValueConfig.INSTANCE);
     }
 
     @Override
@@ -131,6 +151,9 @@ public class PowerFactoryImporter implements Importer {
         // elmTerm object id to busbarSection id mapping
         final Map<Long, NodeRef> elmTermIdToNode = new HashMap<>();
 
+        // staCubic to connectedObj
+        final Map<DataObject, ConnectedObjRef> staCubicToConnectedObj = new HashMap<>();
+
         List<DataObject> cubiclesObjectNotFound = new ArrayList<>();
 
         ImportContext(ContainersMapping containerMapping) {
@@ -176,10 +199,11 @@ public class PowerFactoryImporter implements Importer {
         }
 
         // process terminals
+        boolean forceAllElmTermsAsBusBars = Parameter.readBoolean(FORMAT, parameters, FORCE_ALL_ELMTERMS_AS_BUSBARS_PARAMETER, ParameterDefaultValueConfig.INSTANCE);
         NodeConverter nodeConverter = new NodeConverter(importContext, network);
         for (DataObject elmTerm : elmTerms) {
             if (!hvdcConverter.isDcNode(elmTerm)) {
-                nodeConverter.createAndMapConnectedObjs(elmTerm);
+                nodeConverter.createAndMapConnectedObjs(elmTerm, forceAllElmTermsAsBusBars);
             }
         }
 
@@ -203,11 +227,19 @@ public class PowerFactoryImporter implements Importer {
         // Attach slack buses
         attachSlackBus(network, slackObjects);
 
+        // add Controls
+        addControls(studyCase, importContext, network);
+
         LOGGER.info("{} substations, {} voltage levels, {} lines, {} 2w-transformers, {} 3w-transformers, {} generators, {} loads, {} shunts have been created",
                 network.getSubstationCount(), network.getVoltageLevelCount(), network.getLineCount(), network.getTwoWindingsTransformerCount(),
                 network.getThreeWindingsTransformerCount(), network.getGeneratorCount(), network.getLoadCount(), network.getShuntCompensatorCount());
 
         setVoltagesAndAngles(network, importContext, elmTerms);
+
+        boolean importGeoData = Parameter.readBoolean(FORMAT, parameters, IMPORT_GEODATA_PARAMETER, ParameterDefaultValueConfig.INSTANCE);
+        if (importGeoData) {
+            addGeoData(studyCase, network);
+        }
 
         return network;
     }
@@ -220,7 +252,6 @@ public class PowerFactoryImporter implements Importer {
      */
     static List<DataObject> gatherElmTerms(List<DataObject> elmNets) {
         Objects.requireNonNull(elmNets);
-        assert elmNets.isEmpty() || ELMNET.equals(elmNets.getFirst().getDataClassName());
         return elmNets.stream()
                 .flatMap(elmNet -> elmNet.search(".*.ElmTerm").stream()).toList();
     }
@@ -233,7 +264,6 @@ public class PowerFactoryImporter implements Importer {
      */
     static List<DataObject> gatherElmVscs(List<DataObject> elmNets) {
         Objects.requireNonNull(elmNets);
-        assert elmNets.isEmpty() || ELMNET.equals(elmNets.getFirst().getDataClassName());
         return elmNets.stream()
                 .flatMap(elmNet -> elmNet.search(".*.ElmVsc").stream()).toList();
     }
@@ -244,8 +274,6 @@ public class PowerFactoryImporter implements Importer {
      * @param slackObjects collection of slack buses gathered in convertEquipment.
      */
     private static void attachSlackBus(Network network, List<DataObject> slackObjects) {
-        assert slackObjects.isEmpty()
-                || Set.of("ElmGenstat", "ElmAsm", "ElmSym").contains(slackObjects.getFirst().getDataClassName());
         // It might be possible to inline this directly to convertEquipment, without
         // populating the slackObjects. But maybe some things need to be processed first, let's
         // take no risk.
@@ -268,6 +296,9 @@ public class PowerFactoryImporter implements Importer {
      */
     private static void processEquipment(ImportContext importContext, AbstractHvdcConverter hvdcConverter,
                                          Network network, List<DataObject> slackObjects, DataObject obj) {
+        if (hvdcConverter.isDcObject(obj)) {
+            return;
+        }
         switch (obj.getDataClassName()) {
             case "ElmCoup":
                 new SwitchConverter(importContext, network).createFromElmCoup(obj);
@@ -280,7 +311,14 @@ public class PowerFactoryImporter implements Importer {
                 }
                 break;
 
-            case "ElmLod":
+            case "ElmXnet":
+                new ExternalGridConverter(importContext, network).create(obj);
+                if (ExternalGridConverter.isSlack(obj)) {
+                    slackObjects.add(obj);
+                }
+                break;
+
+            case "ElmLod", "ElmLodmv":
                 new LoadConverter(importContext, network).create(obj);
                 break;
 
@@ -289,9 +327,7 @@ public class PowerFactoryImporter implements Importer {
                 break;
 
             case "ElmLne":
-                if (!hvdcConverter.isDcLink(obj)) {
-                    new LineConverter(importContext, network).create(obj);
-                }
+                new LineConverter(importContext, network).create(obj);
                 break;
             case "ElmTow":
                 new LineConverter(importContext, network).createTower(obj);
@@ -312,7 +348,7 @@ public class PowerFactoryImporter implements Importer {
                 // already processed
                 break;
 
-            case "TypLne", "TypSym", "TypLod", "TypTr2", "TypTr3":
+            case "TypLne", "TypSym", "TypLod", "TypTr2", "TypTr3", "ElmTapctrl":
                 // Referenced by other objects
                 break;
 
@@ -333,7 +369,7 @@ public class PowerFactoryImporter implements Importer {
             case "RelChar", "RelDir", "RelDisdir", "RelDisloadenc", "RelDismho", "RelDispoly", "RelDispspoly",
                  "RelFdetabb", "RelFdetaegalst", "RelFdetect", "RelFdetsie", "RelFmeas", "RelFrq", "RelIoc",
                  "RelLogdip", "RelLogic", "RelLslogic", "RelMeasure", "RelRecl", "RelSeldir", "RelTimer",
-                 "RelToc", "RelUlim", "RelZpol":
+                 "RelToc", "RelUlim", "RelZpol", "RndRef":
 
             case "StaCt", "StaPqmea", "StaVmea", "StaVt":
 
@@ -352,16 +388,76 @@ public class PowerFactoryImporter implements Importer {
                                             AbstractHvdcConverter hvdcConverter,
                                             Network network,
                                             List<DataObject> slackObjects) {
-        assert slackObjects.isEmpty();
         studyCase.getElmNets().stream()
             .flatMap(elmNet -> elmNet.search(".*").stream())
             .forEach(obj -> processEquipment(importContext, hvdcConverter, network, slackObjects, obj));
+    }
+
+    private static void addControls(StudyCase studyCase, ImportContext importContext, Network network) {
+        studyCase.getElmNets().stream()
+                .flatMap(elmNet -> elmNet.search(".*.ElmTr2").stream())
+                .forEach(obj -> new TransformerConverter(importContext, network).addTwoWindingsTransformerControl(obj));
+
+        studyCase.getElmNets().stream()
+                .flatMap(elmNet -> elmNet.search(".*.ElmTr3").stream())
+                .forEach(obj -> new TransformerConverter(importContext, network).addThreeWindingsTransformerControl(obj));
     }
 
     private static void setVoltagesAndAngles(Network network, ImportContext importContext, List<DataObject> elmTerms) {
         VoltageAndAngle va = new VoltageAndAngle(importContext, network);
         for (DataObject elmTerm : elmTerms) {
             va.update(elmTerm);
+        }
+    }
+
+    private static void addGeoData(StudyCase studyCase, Network network) {
+        HashMap<String, DataObject> substationDataObj = createSubstationDataMap(studyCase, network);
+        substationDataObj.forEach((substationId, elmObj) -> NodeConverter.addGeoData(network, elmObj, substationId));
+
+        studyCase.getElmNets().stream()
+                .flatMap(elmNet -> elmNet.search(".*.ElmLne").stream())
+                .forEach(obj -> LineConverter.addGeoData(network, obj));
+    }
+
+    private static HashMap<String, DataObject> createSubstationDataMap(StudyCase studyCase, Network network) {
+        HashMap<String, DataObject> substationDataObj = new HashMap<>();
+
+        studyCase.getElmNets().stream()
+                .flatMap(elmNet -> elmNet.search(".*.ElmSite").stream())
+                .forEach(obj -> addSubstationDataMap(network, substationDataObj, obj.getLocName(), obj));
+
+        studyCase.getElmNets().stream()
+                .flatMap(elmNet -> elmNet.search(".*.ElmSubstat").stream())
+                .forEach(obj -> addSubstationDataMap(network, substationDataObj, obj));
+
+        studyCase.getElmNets().stream()
+                .flatMap(elmNet -> elmNet.search(".*.ElmTrfstat").stream())
+                .forEach(obj -> addSubstationDataMap(network, substationDataObj, obj));
+
+        studyCase.getElmNets().stream()
+                .flatMap(elmNet -> elmNet.search(".*.ElmTerm").stream())
+                .forEach(obj -> addSubstationDataMap(network, substationDataObj, buildSubstationId(obj.getId()), obj));
+
+        return substationDataObj;
+    }
+
+    private static void addSubstationDataMap(Network network, HashMap<String, DataObject> substationDataObj, String substationId, DataObject obj) {
+        if (!substationDataObj.containsKey(substationId) && network.getSubstation(substationId) != null) {
+            substationDataObj.put(substationId, obj);
+        }
+    }
+
+    private static void addSubstationDataMap(Network network, HashMap<String, DataObject> substationDataObj, DataObject obj) {
+        VoltageLevel vl = network.getVoltageLevel(obj.getLocName());
+        if (vl == null) {
+            return;
+        }
+        Substation substation = vl.getSubstation().orElse(null);
+        if (substation == null) {
+            return;
+        }
+        if (!substationDataObj.containsKey(substation.getId()) && substation.getVoltageLevelStream().count() == 1) {
+            substationDataObj.put(substation.getId(), obj);
         }
     }
 
